--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,20 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+                        <id>pre-it</id>
+                        <goals>
+							<goal>start</goal>
+						</goals>
+                    </execution>
+					<execution>
+						<id>post-it</id>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
