adding build info

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<some.custom.prop>foo bar</some.custom.prop>
 	</properties>
 
 	<dependencies>
@@ -51,6 +52,18 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<executions>
+					<execution>
+						<id>build-info-goal</id>
+						<goals>
+							<goal>build-info</goal>
+						</goals>
+						<configuration>
+							<additionalProperties>
+								<java.version>${java.version}</java.version>
+								<some.custom.prop>${some.custom.prop}</some.custom.prop>
+                            </additionalProperties>
+						</configuration>
+					</execution>
 					<execution>
                         <id>pre-it</id>
                         <goals>
